# expense-tracker

./: README.md  budget_tracker_briefing.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 3a1f4d2c9c5b_add_incomes_and_category_budget.py  5c9c1e7f2b1a_add_savings_table.py  625e5fe514b3_initial_migration.py  7b21f1b8a2d4_add_category_budgets.py  9d2c0a1f7c8e_add_wishlist_image_url.py
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: auth.py  budgets.py  categories.py  dashboard.py  expenses.py  incomes.py  savings.py  wishlist.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Expenses.tsx  Login.tsx  Register.tsx  Wishlist.tsx
frontend/src/services/: api.ts  authService.ts  budgetService.ts  categoryService.ts  dashboardService.ts  expenseService.ts  incomeService.ts  savingsService.ts  wishlistService.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
